samples/_failures_safe/1761092708_378310_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_41fb20bb.c: In function ‘main’:
./samples/SAFE/__tmp_41fb20bb.c:144:9: error: expected ‘:’ or ‘...’ at end of input
  144 |         case 2
      |         ^~~~
./samples/SAFE/__tmp_41fb20bb.c:144:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_41fb20bb.c:144:9: error: expected declaration or statement at end of input
